Improved validation and added hasOne relationship

--- a/_examples/todoapp.json
+++ b/_examples/todoapp.json
@@ -164,7 +164,7 @@
             {
                 "item1": "user",
                 "item2": "project",
-                "type": "privateHasMany"
+                "type": "hasMany"
             }
         ],
         "authentication": {
